[workspace]
members = ["benchmark", "examples", "macros", "tipc", "tlib", "tmui"]

[workspace.dependencies]
log = "0.4"
log4rs = "1.1.1"
lazy_static = "1.4.0"
once_cell = "1.17.0"
strum = "0.24.1"
strum_macros = "0.24"
rayon = "1.7.0"
chrono = "0.4"
num_cpus = "1.15.0"
winapi = "0.3.9"
libc = "0.2.144"
hex_color = "2.0.0"
derivative = "2.2.0"
bitflags = "2.4.1"
widestring = "1.0.2"
skia-safe = { version = "0.72.0", features = ["gl", "textlayout", "svg"]}
winit = { version = "0.29.10", default-features = false, features = ["wayland", "x11", "rwh_06"]}
tokio = { version = "1.28.0", features = ["full"] }
rust-embed = { version = "8.3.0", features = [
    "debug-embed",
    "include-exclude",
] }
glutin = "0.31.3"
glutin-winit = "0.4.2"
raw-window-handle = "0.5"
gl = "0.14.0"
clipboard = "0.5.0"
usvg = { version = "0.41.0" }
regex = "1.10.5"
rust_decimal = "1.17.0"
parking_lot = "0.12.1"
shared_memory = "0.12.4"
raw_sync = "0.1.5"
rand = "0.8.5"
sha2 = "0.10.8"
nix = "0.27.1"
paste = "1.0.15"
nohash-hasher = "0.2.0"