[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tipc = { path = "../tipc/" }
tlib = { path = "../tlib/" }

criterion = "0.4.0"
regex = "*"

[[bench]]
name = "value_benchmark"
harness = false

[[bench]]
name = "action_benchmark"
harness = false

[[bench]]
name = "pixels_benchmark"
harness = false

[[bench]]
name = "objects_benchmark"
harness = false

[[bench]]
name = "regex_benchmark"
harness = false