[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tipc = { path = "../tipc/" }
tlib = { path = "../tlib/" }
tmui = { path = "../tmui/" }

criterion = "0.4.0"
regex = "*"
windows = { version = "0.43.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
widestring = "1.0.2"
nohash-hasher = "0.2.0"
ahash = "0.8.11"
rand = "0.8.5"
fxhash = "0.2.1"

[[bench]]
name = "action_benchmark"
harness = false

[[bench]]
name = "builtin_benchmark"
harness = false

[[bench]]
name = "color_format_benchmark"
harness = false

[[bench]]
name = "font_benchmark"
harness = false

[[bench]]
name = "objects_benchmark"
harness = false

[[bench]]
name = "pixels_benchmark"
harness = false

[[bench]]
name = "regex_benchmark"
harness = false

[[bench]]
name = "size_probe_benchmark"
harness = false

[[bench]]
name = "syntax_benchmark"
harness = false

[[bench]]
name = "value_benchmark"
harness = false

[[bench]]
name = "win32_benchmark"
harness = false
