[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
tipc = { path = "../tipc/" }
tmui = { path = "../tmui/", features = ["external_fonts"]}

widestring = "1.0.2"
log = "0.4"
log4rs = "1.1.1"
lazy_static = "1.4.0"
once_cell = "1.17.0"

[[bin]]
name = "animation"
path = "animation/main.rs"

[[bin]]
name = "async_task"
path = "async_task/main.rs"

[[bin]]
name = "box_layout"
path = "box_layout/main.rs"

[[bin]]
name = "child_attr_widget"
path = "child_attr_widget/main.rs"

[[bin]]
name = "custom_diff_handle"
path = "custom_diff_handle/main.rs"

[[bin]]
name = "custom_popup"
path = "custom_popup/main.rs"

[[bin]]
name = "event_bubble"
path = "event_bubble/main.rs"

[[bin]]
name = "image_draw"
path = "image_draw/main.rs"

[[bin]]
name = "input_element"
path = "input_element/main.rs"

[[bin]]
name = "key_event"
path = "key_event/main.rs"

[[bin]]
name = "label_window"
path = "label_window/main.rs"

[[bin]]
name = "layout_widget"
path = "layout_widget/main.rs"

[[bin]]
name = "multi_window"
path = "multi_window/main.rs"

[[bin]]
name = "non_strict_clip"
path = "non_strict_clip/main.rs"

[[bin]]
name = "pane_layout"
path = "pane_layout/main.rs"

[[bin]]
name = "pane_widget"
path = "pane_widget/main.rs"

[[bin]]
name = "run_after"
path = "run_after/main.rs"

[[bin]]
name = "scroll_area_layout"
path = "scroll_area_layout/main.rs"

[[bin]]
name = "scrolled"
path = "scrolled/main.rs"

[[bin]]
name = "self_adaption_layout"
path = "self_adaption_layout/main.rs"

[[bin]]
name = "shared_window_master"
path = "shared_window_master/main.rs"

[[bin]]
name = "shared_window_slave"
path = "shared_window_slave/main.rs"

[[bin]]
name = "skia_paint"
path = "skia_paint/main.rs"

[[bin]]
name = "split_pane_layout"
path = "split_pane_layout/main.rs"

[[bin]]
name = "tree_view"
path = "tree_view/main.rs"

[[bin]]
name = "window"
path = "window/main.rs"