[package]
name = "tipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tlib = { path = "../tlib/" }

lazy_static = "1.4.0"
log = "0.4"
parking_lot = "0.12.1"
shared_memory = "0.12.4"
raw_sync = "0.1.5"
rand = "0.8.5"
sha2 = "0.10.8"

nix = "0.27.1"
winapi = { version = "0.3.9" }

[dev-dependencies]
ctrlc = "3.2.5"
libc = "0.2.144"

[[example]]
name = "ipc_basic"

[[example]]
name = "mem_queue"

[[example]]
name = "mem_rw_lock"