[package]
name = "tipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tlib = { path = "../tlib/" }

lazy_static = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
shared_memory = { workspace = true }
raw_sync = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

nohash-hasher = { workspace = true}
nix = { workspace = true }
winapi = { version = "0.3.9" }

[dev-dependencies]
ctrlc = "3.2.5"
libc = "0.2.144"

[[example]]
name = "ipc_basic"

[[example]]
name = "mem_queue"

[[example]]
name = "mem_rw_lock"
