[package]
name = "tipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tlib = { path = "../tlib/" }

lazy_static = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
shared_memory = { workspace = true }
raw_sync = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

nohash-hasher = { workspace = true}
nix = { workspace = true }
winapi = { workspace = true }

[dev-dependencies]
ctrlc = { workspace = true }
libc = { workspace = true }

[[example]]
name = "ipc_basic"

[[example]]
name = "mem_queue"

[[example]]
name = "mem_rw_lock"
