[package]
name = "tlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "../macros/" }

log = "0.4"
lazy_static = "1.4.0"
once_cell = "1.17.0"
strum = "0.24.1"
strum_macros = "0.24"
rayon = "1.7.0"
num_cpus = "1.15.0"
winapi = "0.3.9"
libc = "0.2.144"
hex_color = "2.0.0"
derivative = "2.2.0"
bitflags = "2.4.1"
skia-safe = { version = "0.57.0", features = ["gl", "textlayout"] }
winit = { version = "0.29.10", default-features = false, features = ["wayland", "x11", "rwh_06"]}
tokio = { version = "1.28.0", features = ["full"] }

[dev-dependencies]
widestring = "1.0.2"