[package]
name = "tlib"
version = "0.1.0"
edition = "2021"

[features]
default = []
x11 = ["skia-safe/x11"]

[dependencies]
macros = { path = "../macros/" }

log = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
rayon = { workspace = true }
chrono = { workspace = true }
num_cpus = { workspace = true }
winapi = { workspace = true }
libc = { workspace = true }
hex_color = { workspace = true }
derivative = { workspace = true }
bitflags = { workspace = true }
widestring = { workspace = true }
winit = { workspace = true }
tokio = { workspace = true }
paste = { workspace = true }
nohash-hasher = { workspace = true }
ahash = { workspace = true }
skia-safe = { version = "0.72.0", features = ["gl", "textlayout", "svg"] }
