[package]
name = "tmui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tipc = { path = "../tipc/" }
tlib = { path = "../tlib/" }

log = "0.4"
glutin = "0.30.3"
lazy_static = "1.4.0"
once_cell = "1.17.0"
widestring = "1.0.2"
clipboard = "0.5.0"
derivative = "2.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.43.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
core-foundation = "0.9.3"
core-graphics = "0.22.3"
cocoa = "0.24.1"

[dev-dependencies]
log4rs = "1.1.1"

[[example]]
name = "box_layout"

[[example]]
name = "window"

[[example]]
name = "layout_widget"

[[example]]
name = "shared_window_master"

[[example]]
name = "shared_window_slave"
