[package]
name = "tmui"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cfg_aliases = "0.1.1"

[features]
default = ["x11"]
wayland = []
x11 = []

[dependencies]
tipc = { path = "../tipc/" }
tlib = { path = "../tlib/" }

log = "0.4"
glutin = "0.31.3"
glutin-winit = "0.4.2"
raw-window-handle = "0.5"
gl = "0.14.0"
lazy_static = "1.4.0"
once_cell = "1.17.0"
widestring = "1.0.2"
clipboard = "0.5.0"
derivative = "2.2.0"
rust-embed = { version = "6.4.2", features = [
    "debug-embed",
    "include-exclude",
] }
strum = "0.24.1"
strum_macros = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.43.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
winapi = { version = "0.3.9", features = ["consoleapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
core-foundation = "0.9.3"
core-graphics = "0.22.3"
cocoa = "0.24.1"
coreaudio-sys = "0.2.12"

[target.'cfg(target_os = "linux")'.dependencies]
dimensioned = "0.8.0"
beep = "0.3.0"

[dev-dependencies]
log4rs = "1.1.1"
