[package]
name = "tmui"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cfg_aliases = "0.2.0"

[features]
default = ["x11", "win_popup"]
wayland = []
x11 = []
font_awesome = []
verbose_logging = []
win_popup = []

[dependencies]
tipc = { path = "../tipc/" }
tlib = { path = "../tlib/" }

log = { workspace = true }
glutin = { workspace = true }
glutin-winit = { workspace = true }
raw-window-handle = { workspace = true }
gl = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
widestring = { workspace = true }
clipboard = { workspace = true }
derivative = { workspace = true }
rust-embed = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
usvg = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
nohash-hasher = { workspace = true }
ahash = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.43.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
winapi = { version = "0.3.9", features = ["consoleapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
core-foundation = "0.9.3"
core-graphics = "0.22.3"
cocoa = "0.24.1"
coreaudio-sys = "0.2.12"

[target.'cfg(target_os = "linux")'.dependencies]
dimensioned = "0.8.0"
beep = "0.3.0"

[dev-dependencies]
log4rs = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(macos_platform)',
    'cfg(ios_platform)',
    'cfg(windows_platform)',
    'cfg(apple)',
    'cfg(free_unix)',
    'cfg(redox)',
    'cfg(x11_platform)',
    'cfg(wayland_platform)',
    'cfg(orbital_platform)',
    'cfg(font_awesome)',
    'cfg(verbose_logging)',
    'cfg(win_popup)',
] }

[patch.crates-io]
xcb = "1.0.0"
